// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processChatResponse > scenario: delayed message annotations in onFinish > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "annotations": [
        {
          "example": "annotation",
        },
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "text",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "inputTokens": 5,
      "outputTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`processChatResponse > scenario: delayed message annotations in onFinish > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "text",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        {
          "example": "annotation",
        },
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "text",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`processChatResponse > scenario: message annotations in onChunk > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "annotations": [
        "annotation1",
        "annotation2",
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1t2",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "inputTokens": 5,
      "outputTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`processChatResponse > scenario: message annotations in onChunk > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
        "annotation2",
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1",
          "type": "text",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
        "annotation2",
      ],
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1t2",
          "type": "text",
        },
      ],
      "revisionId": "id-4",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;
